--- a/WPF_SevenLab/MainWindow.xaml
+++ b/WPF_SevenLab/MainWindow.xaml
@@ -6,96 +6,126 @@
         xmlns:gif="http://wpfanimatedgif.codeplex.com"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="550" ResizeMode="NoResize">
-    
+
     <Grid>
         <Grid x:Name="SearchFirmsGrid" Visibility="Collapsed" ShowGridLines="False">
             <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
             <GroupBox Header="Как вас зовут?" Margin="5" Padding="5"
                       Grid.Row="0" Grid.Column="0">
                 <StackPanel>
-                    <TextBox x:Name="FNameTextBox" Text="Имя"/>
-                    <TextBox x:Name="SNameTextBox" Text="Фамилия"/>
+                    <TextBox x:Name="FNameTextBox" Text="Имя" />
+                    <TextBox x:Name="SNameTextBox" Text="Фамилия" />
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Анкета" Margin="5" Padding="5"
                       Grid.Column="0" Grid.Row="1" Grid.RowSpan="2">
-                <StackPanel >
-                    <TextBlock Text="Отметьте свои положительные качества:" Margin="2"/>
-                    <CheckBox x:Name="SmartCheckBox" Content="Умный" Margin="2"/>
-                    <CheckBox x:Name="KindCheckBox" Content="Добрый" Margin="2"/>
-                    <CheckBox x:Name="WealthyCheckBox" Content="Богатый" Margin="2"/>
-                    <TextBlock Text="Отметьте свои отрицательные качества:" Margin="2"/>
-                    <CheckBox x:Name="LazyCheckBox" Content="Ленивый" Margin="2"/>
-                    <CheckBox x:Name="GreedyCheckBox" Content="Жадный" Margin="2"/>
-                    <CheckBox x:Name="WickedCheckBox" Content="Безнравственный" Margin="2"/>
+                <StackPanel>
+                    <TextBlock Text="Отметьте свои положительные качества:" Margin="2" />
+                    <CheckBox x:Name="SmartCheckBox" Content="Умный" Margin="2" />
+                    <CheckBox x:Name="KindCheckBox" Content="Добрый" Margin="2" />
+                    <CheckBox x:Name="WealthyCheckBox" Content="Богатый" Margin="2" />
+                    <TextBlock Text="Отметьте свои отрицательные качества:" Margin="2" />
+                    <CheckBox x:Name="LazyCheckBox" Content="Ленивый" Margin="2" />
+                    <CheckBox x:Name="GreedyCheckBox" Content="Жадный" Margin="2" />
+                    <CheckBox x:Name="WickedCheckBox" Content="Безнравственный" Margin="2" />
                 </StackPanel>
             </GroupBox>
             <GroupBox Header="Список фирм" Margin="5" Padding="5"
                       Grid.Column="1" Grid.Row="0" Grid.RowSpan="2">
-                <ListBox x:Name="ListBox"/>
+                <ListBox x:Name="FirmsListBox" />
             </GroupBox>
             <GroupBox Header="О фирме" Margin="5" Padding="5"
                       Grid.Column="1" Grid.Row="2">
-                <TextBlock x:Name="TextBlock" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+                <TextBlock x:Name="FirmIndoTextBlock" VerticalAlignment="Top" HorizontalAlignment="Left" />
             </GroupBox>
-            <Button Grid.Row="3" Grid.Column="0"  Margin="40"
-                    Content="Назад" Click="BackMenu_OnClick"/>
-            <Button Grid.Row="3" Grid.Column="1" Margin="40"
-                    Content="Поиск"/>
+            <Button Grid.Row="3" Grid.Column="0" Margin="10"
+                    Content="Назад" Click="BackMenu_OnClick" />
+            <Button Grid.Row="3" Grid.Column="1" Margin="10"
+                    Content="Поиск" Click="SearchFirms_OnClick" />
         </Grid>
         <Grid x:Name="SearchWorkersGrid" Visibility="Collapsed" ShowGridLines="False">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            
-            <Button Grid.Row="3" Grid.Column="0" Margin="40"
-                    Content="Назад" Click="BackMenu_OnClick"/>
-            <Button Grid.Row="3" Grid.Column="1" Margin="40"
-                    Content="Поиск"/>
-            
+            <GroupBox Header="Данные вашей фирмы" Margin="5" Padding="5">
+                <StackPanel>
+                    <TextBlock Text="Название" />
+                    <TextBox x:Name="NameFirmTextBox" />
+                    <TextBlock Text="Условия работы" Margin="5" />
+                    <CheckBox x:Name="ConvenientScheduleCheckBox"
+                              Content="Удобный график" Margin="5" />
+                    <CheckBox x:Name="BigSalaryCheckBox"
+                              Content="Большая зарплата" Margin="5" />
+                    <CheckBox x:Name="CloseToHomeCheckBox"
+                              Content="Близко к дому" Margin="5" />
+                    <CheckBox x:Name="ComfortableOfficeCheckBox"
+                              Content="Комфортный офис" Margin="5" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Grid.Row="1" Grid.Column="0" Header="Качества сотрудников"
+                      Margin="5" Padding="5">
+                <StackPanel>
+                    <TextBlock Text="Необходимые качества:" Margin="2" />
+                    <CheckBox x:Name="FSmartCheckBox" Content="Умный" Margin="2" />
+                    <CheckBox x:Name="FKindCheckBox" Content="Добрый" Margin="2" />
+                    <CheckBox x:Name="FWealthyCheckBox" Content="Богатый" Margin="2" />
+                    <TextBlock Text="Отсутствие качеств:" Margin="2" />
+                    <CheckBox x:Name="FLazyCheckBox" Content="Ленивый" Margin="2" />
+                    <CheckBox x:Name="FGreedyCheckBox" Content="Жадный" Margin="2" />
+                    <CheckBox x:Name="FWickedCheckBox" Content="Безнравственный" Margin="2" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Grid.Row="0" Grid.Column="1" Margin="5" Padding="5"
+                      Grid.RowSpan="2" Header="Список сотрудников">
+                <ListBox x:Name="CandidatesListBox" />
+            </GroupBox>
+            <Button Grid.Row="2" Grid.Column="0" Margin="10"
+                    Content="Назад" Click="BackMenu_OnClick" />
+            <Button Grid.Row="2" Grid.Column="1" Margin="10"
+                    Content="Поиск" Click="SearchCandidates_OnClick"/>
+
         </Grid>
         <Grid x:Name="MainGrid" Visibility="Visible">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            <Image Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" 
-                   Grid.RowSpan="2"/>
-            <Button Margin="40"
+            <Image Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
+                   Grid.RowSpan="2" />
+            <Button Margin="10"
                     Grid.Row="3"
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
-                    Content="Поиск работы" 
-                    Click="DisplaySearchFirmsGrid_OnClick"/>
+                    Content="Поиск работы"
+                    Click="DisplaySearchFirmsGrid_OnClick" />
             <Button Grid.Row="3" Grid.Column="2"
                     Grid.ColumnSpan="2"
-                    Margin="40"
+                    Margin="10"
                     Content="Поиск работяг"
-                    Click="DisplaySearchWorkersGrid_OnClick"/>
+                    Click="DisplaySearchWorkersGrid_OnClick" />
         </Grid>
     </Grid>
 </Window>
