--- a/WPF_SevenLab/MainWindow.xaml
+++ b/WPF_SevenLab/MainWindow.xaml
@@ -28,12 +28,12 @@
                     Grid.Column="0"
                     Grid.ColumnSpan="2"
                     Content="Поиск работы"
-                    Click="ForEmployeeButtonBase_OnClick" />
+                    Click="ForEmployee_OnClick" />
             <Button Grid.Row="3" Grid.Column="2"
                     Grid.ColumnSpan="2"
                     Margin="10"
                     Content="Поиск работяг"
-                    Click="ForCompanyButton_OnClick" />
+                    Click="ForCompany_OnClick" />
             <Button Grid.Row="2" 
                     Grid.Column="0" 
                     Grid.ColumnSpan="2"
