--- a/WPF_SevenLab/MainWindow.xaml
+++ b/WPF_SevenLab/MainWindow.xaml
@@ -5,41 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Closing="MainWindow_OnClosing"
-        Title="MainWindow" Height="500" Width="550" ResizeMode="NoResize">
+        Title="MainWindow" Height="160" Width="550" ResizeMode="NoResize">
 
     <Grid>
         <Grid x:Name="MainGrid">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
-                <ColumnDefinition />
-                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            <Image Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"
-                   Grid.RowSpan="2" />
             <Button Margin="10"
-                    Grid.Row="3"
+                    Grid.Row="1"
                     Grid.Column="0"
-                    Grid.ColumnSpan="2"
                     Content="Поиск работы"
                     Click="ForEmployee_OnClick" />
-            <Button Grid.Row="3" Grid.Column="2"
-                    Grid.ColumnSpan="2"
+            <Button Grid.Row="1" Grid.Column="1"
                     Margin="10"
                     Content="Поиск работяг"
                     Click="ForCompany_OnClick" />
-            <Button Grid.Row="2" 
+            <Button Grid.Row="0" 
                     Grid.Column="0" 
-                    Grid.ColumnSpan="2"
                     Margin="10" 
                     Content="Создать резюме"
                     Click="CreateEmployee_OnClick"/>
+            <Button Grid.Row="0" 
+                    Grid.Column="1" 
+                    Margin="10" 
+                    Content="Разместить компанию"
+                    Click="CreateCompany_OnClick"/>
         </Grid>
     </Grid>
 </Window>
