--- a/WPF_SevenLab/Window/ForCompanyWindow.xaml
+++ b/WPF_SevenLab/Window/ForCompanyWindow.xaml
@@ -5,23 +5,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
         Closing="ForCompanyWindow_OnClosing"
-        Title="ForCompanyWindow" Height="450" Width="800">
+        Title="ForCompanyWindow" Height="530" Width="400" ResizeMode="NoResize">
     <Grid x:Name="SearchWorkersGrid" ShowGridLines="False">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical">
             <TextBlock Text="Выберите себя" VerticalAlignment="Center"
                        Margin="5"/>
-            <ComboBox x:Name="EmployeeComboBox" Height="30" Width="150" Margin="5"/>
+            <ComboBox x:Name="EmployeeComboBox" Height="30" Width="150" Margin="5" 
+                      DropDownClosed="EmployeeComboBox_OnDropDownClosed"/>
             <Button Content="Поиск" Margin="5" Click="SearchWorkers_OnClick"/>
             <GroupBox Header="Ваши данные" Padding="5">
-                <TextBlock x:Name="EmployeeInfoTextBlock"/>
+               <ScrollViewer HorizontalScrollBarVisibility="Visible" 
+                             VerticalScrollBarVisibility="Disabled">
+                   <TextBlock x:Name="CandidateInfoTextBlock"/>
+               </ScrollViewer>
+            </GroupBox>
+            <GroupBox Header="Инфо о фирме" Padding="5">
+                <ScrollViewer HorizontalScrollBarVisibility="Visible" 
+                              VerticalScrollBarVisibility="Disabled">
+                    <TextBlock x:Name="CompanyInfoTextBlock"/>
+                </ScrollViewer>
             </GroupBox>
         </StackPanel>
         <GroupBox Grid.Column="1" Header="Список подходящих фирм" Padding="5">
-            <ListBox x:Name="RatingListBox"/>
+            <ListBox x:Name="RatingListBox" MouseDoubleClick="RatingListBox_OnMouseDoubleClick"/>
         </GroupBox>
     </Grid>
 </Window>
