--- a/WPF_SevenLab/Window/NewEmployeeWindow.xaml
+++ b/WPF_SevenLab/Window/NewEmployeeWindow.xaml
@@ -5,29 +5,48 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         mc:Ignorable="d"
         Closing="NewEmployeeWindow_OnClosing"
-        Title="NewEmployeeWindow" Height="450" Width="800" MinWidth="300" MinHeight="450">
+        Title="NewEmployeeWindow" Height="375" Width="430" MinWidth="300" MinHeight="450">
     <Grid ShowGridLines="True">
-        <StackPanel Margin="20" Background="Tan">
+        <StackPanel Margin="20">
             <TextBlock Text="Введите свое имя"/>
             <TextBox x:Name="FNameTextBox"/>
             <TextBlock Text="Введите свою фамилию"/>
             <TextBox x:Name="SNameTextBox"/>
             <TextBlock Text="Отметьте свои качества"/>
-            <CheckBox x:Name="SmartCheckBox" Content="Умный" Margin="2" />
-            <CheckBox x:Name="KindCheckBox" Content="Добрый" Margin="2" />
-            <CheckBox x:Name="WealthyCheckBox" Content="Cостоятельный" Margin="2" />
-            <CheckBox x:Name="LazyCheckBox" Content="Ленивый" Margin="2" />
-            <CheckBox x:Name="GreedyCheckBox" Content="Жадный" Margin="2" />
-            <CheckBox x:Name="WickedCheckBox" Content="Безнравственный" Margin="2" />
+            <StackPanel Orientation="Horizontal">
+                <GroupBox Header="Положительные" Padding="5">
+                    <StackPanel>
+                        <CheckBox x:Name="SmartCheckBox" Content="Умный" Margin="2" />
+                        <CheckBox x:Name="KindCheckBox" Content="Добрый" Margin="2" />
+                        <CheckBox x:Name="WealthyCheckBox" Content="Cостоятельный" Margin="2" />
+                    </StackPanel>
+                </GroupBox>
+                <GroupBox Header="Отрицательные" Padding="5">
+                    <StackPanel>
+                        <CheckBox x:Name="LazyCheckBox" Content="Ленивый" Margin="2" />
+                        <CheckBox x:Name="GreedyCheckBox" Content="Жадный" Margin="2" />
+                        <CheckBox x:Name="WickedCheckBox" Content="Безнравственный" Margin="2" />
+                    </StackPanel>
+                </GroupBox>
+            </StackPanel>
             <TextBlock Text="Что вы ожидаете от фирмы?"/>
-            <CheckBox x:Name="ConvenientScheduleCheckBox" Content="Удобный график" Margin="2"/>
-            <CheckBox x:Name="BigSalaryCheckBox" Content="Большая зарплата" Margin="2"/>
-            <CheckBox x:Name="ComfortableOfficeCheckBox" Content="Комфортный офис" Margin="2"/>
-            <CheckBox x:Name="TerribleWorkingConditionsCheckBox" Content="Ужасные условия труда" Margin="2"/>
-            <CheckBox x:Name="NegativeTeamCheckBox" Content="Напряжённая обстановка в офисе" Margin="2"/>
-            <CheckBox x:Name="BadEquipmentCheckBox" Content="Плохое оборудование" Margin="2"/>
+            <StackPanel Orientation="Horizontal">
+                <GroupBox Header="Положительные" Padding="5">
+                    <StackPanel>
+                        <CheckBox x:Name="ConvenientScheduleCheckBox" Content="Удобный график" Margin="2"/>
+                        <CheckBox x:Name="BigSalaryCheckBox" Content="Большая зарплата" Margin="2"/>
+                        <CheckBox x:Name="ComfortableOfficeCheckBox" Content="Комфортный офис" Margin="2"/>
+                    </StackPanel>
+                </GroupBox>
+                <GroupBox Header="Отрицательные" Padding="5">
+                    <StackPanel>
+                        <CheckBox x:Name="TerribleWorkingConditionsCheckBox" Content="Ужасные условия труда" Margin="2"/>
+                        <CheckBox x:Name="NegativeTeamCheckBox" Content="Напряжённая обстановка в офисе" Margin="2"/>
+                        <CheckBox x:Name="BadEquipmentCheckBox" Content="Плохое оборудование" Margin="2"/>
+                    </StackPanel>
+                </GroupBox>
+            </StackPanel>
+            <Button Click="CreateNewEmployee_OnClick" Content="Создать" Padding="10" Margin="10"/>
         </StackPanel>
-        <Button Click="CreateNewEmployee_OnClick"
-            VerticalAlignment="Bottom" Content="Создать" Padding="10" Margin="10"/>
     </Grid>
 </Window>
